<resources>
    <string name="app_name">QiUser</string>
    <string name="title_activity_home_tab">HomeTabActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="home_tab_mine">我的</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="yonghuxieyi">本人接受《企成成用户服务协议》</string>
    <string name="setpass">设置密码</string>
    <string name="getyanzheng">获取验证码</string>
    <string name="edityanzheng">输入验证码</string>
    <string name="inputphone">输入手机号</string>
    <string name="regist">注册</string>
    <string name="login">登录</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="havenouser">还没有账号？</string>
    <string name="regist_byphone"><![CDATA[手机快速注册>>]]></string>
    <string name="forgetpass">忘记密码?</string>
    <string name="net_error">网络错误,请检查网络是否连接</string>
    <string name="mine">我的</string>
    <string name="daijiedan">待结单</string>
    <string name="daipingjia">待评价</string>
    <string name="yipingjia">已评价</string>
    <string name="zonghe">综合</string>
    <string name="haoping">好评</string>
    <string name="chengdan">成单量</string>
    <string name="haopingshu">好评数</string>
    <string name="mineorder">我的订单</string>
    <string name="yijiedan">已接单</string>
    <string name="kefuzhongxin">客服中心</string>
    <string name="setting">设置</string>
    <string name="yijianfankui">意见反馈</string>
    <string name="lianxifangsh">留下您的联系方式，以便我们联系到您(可选)</string>
    <string name="wentitijiao">问题提交</string>
    <string name="choiseway">qq/邮箱/电话任选其一</string>
    <string name="shangbiaoxiangqing">商标详情</string>
    <string name="shangbiaoname">商标名称:</string>
    <string name="shenqinghao">注册号:</string>
    <string name="shenqingleibie">申请类别:</string>
    <string name="shenqingren">申请人</string>
    <string name="shenqingdizhi">申请人地址</string>
    <string name="shenqingtime">申请日期:</string>
    <string name="chushenriqi">初审公告日期:</string>
    <string name="zhuceriqi">注册公告日期:</string>
    <string name="zhuanyongqixian">专用期限:</string>
    <string name="fuwuxiangmu">商标/服务项目:</string>
    <string name="jigouxinxi">代理机构信息:</string>
    <string name="shenqingshangbiao">商标申请</string>
    <string name="brandname">商标名称:</string>
    <string name="inputthebrandname">请输入商标名称</string>
    <string name="phonenumber">电话号码:</string>
    <string name="inputthephonenum">请输入电话号码</string>
</resources>
