<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/regist_back"
    tools:context="com.qcc.qiuser.Activity.LoginActivity">
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="16dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/login_head"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@mipmap/login_headimg"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"/>

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/regsit_name"
        android:layout_marginTop="44dp"
        app:layout_constraintTop_toBottomOf="@+id/login_head"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/imageView12"/>

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_username"
        app:srcCompat="@mipmap/regist_line"/>

    <EditText
        android:id="@+id/login_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="0dp"
        android:background="@null"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="phone"
        android:textColor="@color/white"
        android:textColorHint="@color/hintcolor"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView9"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/imageView9"
        app:layout_constraintRight_toRightOf="@+id/login_userpass"/>

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/regist_pass"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/imageView9"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView10"/>

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/regist_line"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView11"
        app:layout_constraintHorizontal_bias="0.503"/>

    <EditText
        android:id="@+id/login_userpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-1dp"
        android:layout_marginLeft="0dp"
        android:background="@null"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/hintcolor"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView11"
        app:layout_constraintLeft_toLeftOf="@+id/login_username"/>

    <ImageButton
        android:id="@+id/login_bt"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="40dp"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView12"
        app:srcCompat="@mipmap/login_bt_no"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:text="@string/havenouser"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="@+id/login_userpass"
        app:layout_constraintTop_toBottomOf="@+id/login_bt"/>

    <TextView
        android:id="@+id/login_regist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="-1dp"
        android:text="@string/regist_byphone"
        android:textColor="@color/maincolor"
        app:layout_constraintLeft_toRightOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/login_bt"/>

    <TextView
        android:id="@+id/login_forgetpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="0dp"
        android:layout_marginTop="5dp"
        android:text="@string/forgetpass"
        android:textColor="@color/white"
        app:layout_constraintRight_toRightOf="@+id/imageView12"
        app:layout_constraintTop_toBottomOf="@+id/imageView12"/>

</android.support.constraint.ConstraintLayout>
</layout>