<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/regist_back"
    tools:context="com.qcc.qiuser.Activity.RegistActivity">
    <TextView
        android:id="@+id/regist_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="16dp"
        android:text="@string/regist"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        app:layout_constraintTop_toBottomOf="@+id/regist_title"
        app:srcCompat="@mipmap/regsit_name"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/imageView2"/>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:srcCompat="@mipmap/regist_line"/>

    <EditText
        android:id="@+id/regist_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:background="@null"
        android:ems="10"
        android:hint="@string/inputphone"
        android:inputType="phone"
        android:textColor="@color/white"
        android:textColorHint="@color/hintcolor"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintLeft_toRightOf="@+id/imageView"/>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="30dp"
        app:layout_constraintLeft_toLeftOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:srcCompat="@mipmap/regsit_yanzheng"/>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:srcCompat="@mipmap/regist_line"
        />

    <EditText
        android:id="@+id/regist_yanzheng"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-1dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:background="@null"
        android:ems="10"
        android:hint="@string/edityanzheng"
        android:inputType="none|number"
        android:textColor="@color/white"
        android:textColorHint="@color/hintcolor"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintLeft_toLeftOf="@+id/regist_phone"
        app:layout_constraintRight_toRightOf="@+id/imageView4"/>

    <Button
        android:id="@+id/regist_getyanzheng"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="0dp"
        android:background="@mipmap/regist_kuang"
        android:text="@string/getyanzheng"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintLeft_toRightOf="@+id/regist_yanzheng"
        app:layout_constraintRight_toRightOf="@+id/imageView2"/>

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="30dp"
        app:layout_constraintLeft_toLeftOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:srcCompat="@mipmap/regist_pass"/>

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/imageView2"
        app:layout_constraintRight_toRightOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:srcCompat="@mipmap/regist_line"/>

    <EditText
        android:id="@+id/regist_pass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:background="@null"
        android:ems="10"
        android:hint="@string/setpass"
        android:inputType="textVisiblePassword"
        android:textColor="@color/white"
        android:textColorHint="@color/hintcolor"
        android:textSize="14sp"
        android:digits="0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
        app:layout_constraintLeft_toLeftOf="@+id/regist_yanzheng"
        app:layout_constraintRight_toRightOf="@+id/imageView6"/>

    <CheckBox
        android:id="@+id/regist_xieyi"
        style="@style/Widget.AppCompat.CompoundButton.CheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="10dp"
        android:buttonTint="@color/bestareatextcolor"
        android:checked="true"
        android:clickable="false"
        android:duplicateParentState="false"
        app:layout_constraintLeft_toLeftOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-1dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:text="@string/yonghuxieyi"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/regist_xieyi"
        app:layout_constraintLeft_toLeftOf="@+id/regist_pass"
        app:layout_constraintTop_toTopOf="@+id/regist_xieyi"
        app:layout_constraintVertical_bias="0.6"/>

    <ImageButton
        android:id="@+id/regist_bt"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@mipmap/regsit_btnot"/>

    <ImageButton
        android:id="@+id/regist_back"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/regist_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/regist_title"
        app:srcCompat="@mipmap/fanhui"/>

</android.support.constraint.ConstraintLayout>
</layout>